<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Titles -->
    <string name="title_app">Unify Home</string>
    <string name="title_social">Social</string>
    <string name="title_drawer">Apps</string>

    <!-- Menu Items -->
    <string name="action_add">Add</string>
    <string name="action_add_screen">Add Screen</string>
    <string name="action_add_item">Add Item</string>

    <string name="action_rearrange">Rearrange</string>
    <string name="action_rearrange_screens">Rearrange Screens</string>
    <string name="action_rearrange_items">Rearrange Items</string>

    <string name="action_settings">Preferences</string>
    <string name="action_change_wallpaper">Change Wallpaper</string>
    <string name="action_remove_screen">Remove Current Screen</string>
    <string name="action_rename_screen">Rename Current Screen</string>

    <!-- Dialog Strings -->
    <string name="dialog_btn_ok">Ok</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_btn_yes">Yes</string>
    <string name="dialog_btn_no">No</string>
    <string name="dialog_btn_next">Next</string>
    <string name="dialog_btn_back">Back</string>

    <string name="dialog_add_screen_title">Add Screen</string>
    <string name="dialog_add_screen_edit_hint">Screen name</string>
    <string name="dialog_add_screen_message">Pick a Screen name</string>

    <string name="dialog_add_item_title">Add Item</string>
    <string name="dialog_add_item_edit_hint">Item name</string>
    <string name="dialog_add_item_radio_app">Apps</string>
    <string name="dialog_add_item_radio_widget">Widget</string>
    <string name="dialog_add_item_radio_hint">What will you add in this Workspace Item?</string>

    <string name="dialog_remove_screen_title">Remove Screen</string>
    <string name="dialog_remove_screen_message">Are you sure you want to remove this Screen?</string>

    <string name="dialog_rename_screen_title">Rename screen</string>
    <string name="dialog_rename_screen_message">Change the screen title</string>

    <string name="dialog_item_settings_title">Item Settings</string>
    <string name="dialog_item_settings_list_add_app">Add app</string>
    <string name="dialog_item_settings_list_remove_item">Remove item</string>
    <string name="dialog_item_settings_list_rename_item">Rename item</string>

    <string name="dialog_item_remove_app_title">Remove app</string>
    <string name="dialog_item_remove_app_message">Are you sure you want to remove this app from the workspace?</string>
    <string name="dialog_item_remove_app_toast">Removed</string>

    <string name="dialog_item_remove_item_title">Remove item</string>
    <string name="dialog_item_remove_item_message">Are you sure you want to remove this item from the workspace
        screen?
    </string>
    <string name="dialog_item_add_app_title">Select an app</string>
    <string name="dialog_item_add_app_toast">You already have this app in this Item.</string>
    <string name="dialog_item_rename_item_title">Rename item</string>
    <string name="dialog_item_rename_item_message">Change the item title</string>
    <string name="dialog_item_settings_list_rearrange_content">Rearrange apps</string>

    <!-- Layout Strings -->
    <string name="buttonbar_shortcut">App Shortcut</string>
    <string name="buttonbar_settings">Settings</string>
    <string name="buttonbar_drawer">App Drawer</string>
</resources>