<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/White">

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:padding="4dp">

        <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/buttonbar_btn_fav1"
                android:contentDescription="@string/buttonbar_shortcut"/>

        <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/buttonbar_btn_fav2"
                android:contentDescription="@string/buttonbar_shortcut"/>

        <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/buttonbar_btn_fav3"
                android:contentDescription="@string/buttonbar_shortcut"/>

        <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/buttonbar_btn_fav4"
                android:contentDescription="@string/buttonbar_shortcut"/>

        <ImageButton
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:id="@+id/buttonbar_btn_fav5"
                android:contentDescription="@string/buttonbar_shortcut"/>
    </LinearLayout>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="right"
            android:paddingRight="4dp">

        <ImageButton
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:id="@+id/buttonbar_btn_drawer"
                android:contentDescription="@string/buttonbar_drawer"/>

        <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:id="@+id/buttonbar_btn_settings"
                android:contentDescription="@string/buttonbar_settings"/>
    </LinearLayout>

</LinearLayout>